# information_retrieval_embedding_aleph_alpha

./: .gitignore  Dockerfile  README.md  archicture.drawio  docker-compose.yaml  pyproject.toml  requirements.txt
conf/: main_conf.yml
data/output/: embedding_dict.json
information_retrieval/: main_gui.py
information_retrieval/embedding/: embedding_handler.py  embedding_handler_qdrant.py
